src/main/java/com/example/team1_be/utils/errors/exception/UnauthorizedException.java
package com.example.team1_be.utils.errors.exception;

import org.springframework.http.HttpStatus;

import com.example.team1_be.utils.ApiUtils;

import lombok.Getter;

@Getter
public class UnauthorizedException extends RuntimeException {
	public UnauthorizedException(String message) {
		super(message);
	}

	public ApiUtils.ApiResult<?> body() {
		return ApiUtils.error(getMessage(), HttpStatus.UNAUTHORIZED);
	}

	public HttpStatus status() {
		return HttpStatus.UNAUTHORIZED;
	}
}